--- a/CrimianlLawyer.html
+++ b/CrimianlLawyer.html
@@ -89,7 +89,7 @@
         <nav id="nav-bar" class="nav-bar">
             <div class="container">
                 <div class="brand">
-                    <a href="home_01.html" class="website-logo">
+                    <a href="index.html" class="website-logo">
                         <img class="img-fluid one" src="assets/images/logo/logo.png" alt="01 Logo">
                         <img class="img-fluid two" src="assets/images/logo/logo.png" alt="02 Logo">
                     </a>
